3차 기능 완료

--- a/templates/rank/list.html
+++ b/templates/rank/list.html
@@ -50,7 +50,7 @@
                 <div class="callout">
                     <div class="grid-x grid-padding-x">
                         <div class="large-2 medium-2 cell"><img src="{{ rank.imageurl }}" /></div>
-                        <div class="large-2 medium-2 cell">{{ rank.rank }}위 (최근 순위 : {{  rank.latestRank }})</div>
+                        <div class="large-2 medium-2 cell">{{ rank.rank }}위 (최근 순위 : {{  rank.latestRank }}위 - {{ rank.latestSearchDate }})</div>
                         <div class="large-8 medium-2 cell">{{ rank.title }}</div>
                     </div>
                 </div>
