--- a/templates/rank/list.html
+++ b/templates/rank/list.html
@@ -6,7 +6,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>네이버 쇼핑 순위 검색 </title>
-    <link rel="stylesheet" href="../static/assets/css/foundation.css">
+    <link rel="stylesheet" href="../static/assets/css/foundation.css" />
+    <script src = "../static/assets/js/vendor.js" type="text/javascript"></script>
+    <script src = "../static/assets/js/rank.js" type="text/javascript"></script>
   </head>
 <body>
 
@@ -24,39 +26,24 @@
     <div class="large-8 medium-8 cell">
         <div class="grid-x grid-padding-x">
             <div class="large-12 cell">
-                <form action="/rank/" method="post" id="searchRank">
-                    {% csrf_token %}
                     <div class="callout">
                         <div class="grid-x grid-padding-x">
                             <div class="large-4 medium-4 cell">
-                                <input name="keyword" type="text" placeholder="키워드" value="{{ keyword }}" />
+                                <input id="keyword" name="keyword" type="text" placeholder="키워드" value="" />
                             </div>
                             <div class="large-4 medium-4 cell">
-                                <input name="company" type="text" placeholder="회사명" value="{{ company }}" />
+                                <input id="company" name="company" type="text" placeholder="회사명" value="" />
                             </div>
                             <div class="large-4 medium-4 cell">
-                                <a href="javascript:{}" onclick="document.getElementById('searchRank').submit();" class="button">네이버 쇼핑 순위 검색</a>
+                                <a href="javascript:{}" id="searchBtn" class="button">네이버 쇼핑 순위 검색</a>
                             </div>
                         </div>
                     </div>
-                </form>
             </div>
         </div>
     </div>
     <div class="large-8 medium-8 cell">
-        <div class="grid-x grid-padding-x">
-        {% for rank in ranks %}
-            <div class="large-12 cell">
-                <div class="callout">
-                    <div class="grid-x grid-padding-x">
-                        <div class="large-2 medium-2 cell"><img src="{{ rank.imageurl }}" /></div>
-                        <div class="large-2 medium-2 cell">{{ rank.rank }}위 (최근 순위 : {{  rank.latestRank }}위 - {{ rank.latestSearchDate }})</div>
-                        <div class="large-8 medium-2 cell">{{ rank.title }}</div>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
-        </div>
+        <div class="grid-x grid-padding-x" id = "contentsDiv"><!-- contents --></div>
     </div>
 </div>
 
